# tg-backup-watchdog

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_core_tables.py  0002_backup_states.py  0003_producer_credentials.py
backend/app/: main.py  schemas.py
backend/app/api/: admin.py  jobs.py  producers.py  report.py  summary.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: models.py  session.py
backend/app/domain/: backup_report.py  check_result.py  job.py  producer.py  state.py  status.py
backend/app/parsers/: base.py  cobian.py  custom.py  dispatcher.py  parsed_message.py  restic.py  unknown.py  utils.py
backend/app/repositories/: backup_job.py  backup_run.py  backup_state.py  producer_credential.py  telegram_offset.py
backend/app/scheduler/: __main__.py  service.py
backend/app/schemas/: __init__.py  job.py  producer.py  report.py  state.py
backend/app/services/: check_engine.py  ingest.py  interfaces.py  producer_registry.py  state_engine.py  state_service.py  watchdog.py
backend/app/telegram/: __main__.py  client.py  filters.py  listener.py  notifications.py  service.py  update.py
backend/tests/: test_api_flow.py  test_check_engine.py  test_notifications.py  test_parsers.py  test_scheduler.py  test_state_engine.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
docs/: TG_AI_SKELETON_SECURITY_REFACTOR_PLAN.md
examples/: cobian_send_full.ps1  cobian_send_report.ps1  restic_watchdog_template.ps1
(+2 files in other folders)
