[project]
name = "backup-watchdog"
version = "0.1.0"
description = "Universal Backup Monitoring System"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "httpx==0.28.1",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = [
    "backend"
]
[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]
